feat: added tokens error handling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <title>Terminal</title>
 </head>
 <body>
+  <input id="input" type="text">
 
+  <script type="module" src="/src/modules/main.js"></script>
 </body>
 </html>
